whitespace at bottom fix

--- a/src/index.scss
+++ b/src/index.scss
@@ -73,11 +73,13 @@ body,
 #root,
 .App {
     height: 100%;
+    width: 100%;
 }
 
 #root {
+    overflow-y: scroll;
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
